--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "framer-motion": "^10.13.0",
+    "fuse.js": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
+    "react-search-autocomplete": "^8.5.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
