Feature: Mystery Movie Card

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "framer-motion": "^10.13.0",
+    "create-react-app": "^5.0.1",
+    "framer-motion": "^10.15.1",
     "fuse.js": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
